--- a/debian/po/kn.po
+++ b/debian/po/kn.po
@@ -11,6 +11,7 @@
 # shashi kiran <shashi859@gmail.com>, 2010, 2011.
 # Prabodh CP <prabodhcp@gmail.com>, 2011.
 #
+# Credits: Thanks to contributions from Free Software Movement Karnataka (FSMK), 2011.
 #
 # Translations from iso-codes:
 #   Shankar Prasad <svenkate@redhat.com>, 2009.
@@ -20,8 +21,8 @@ msgstr ""
 "Project-Id-Version: kn\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2011-11-01 23:07+0530\n"
-"Last-Translator: vignesh prabhu <stove311987@gmail.com>\n"
+"PO-Revision-Date: 2011-11-27 23:24+0530\n"
+"Last-Translator: Prabodh C P <prabodh@fsmk.org>\n"
 "Language-Team: Kannada <debian-l10n-kannada@lists.debian.org>\n"
 "Language: kn\n"
 "MIME-Version: 1.0\n"
@@ -68,6 +69,7 @@ msgstr "proc ಕಡತ ವ್ಯವಸ್ಥೆ ಯು /target/proc ಮೇಲೆ
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
+"/var/log/syslogನಲ್ಲಿ ಅಥವಾ ಅವಾಸ್ತವಿಕ ಆಜ್ಞಾಫಲಕ ೪ ರಲ್ಲಿ ಹೆಚ್ಚಿನ ಮಾಹಿತಿಗಾಗಿ ಪರೀಕ್ಷಿಸಿ."
 
 #. Type: error
 #. Description
