[l10n] [SILENT_COMMIT]  Commit changed/added files

--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -22,7 +22,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2012-04-02 01:35-0300\n"
+"PO-Revision-Date: 2012-04-07 19:57-0300\n"
 "Last-Translator: Felipe Augusto van de Wiel (faw) <faw@debian.org>\n"
 "Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
 "org>\n"
@@ -181,5 +181,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Você precisará iniciar manualmente com o kernel ${KERNEL} na partição "
+"Você precisará inicializar manualmente com o kernel ${KERNEL} na partição "
 "${BOOT} e ${ROOT} passado como argumento para o kernel."
