--- a/debian/po/lo.po
+++ b/debian/po/lo.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: lo\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2010-11-26 09:11+0700\n"
+"PO-Revision-Date: 2012-04-23 11:59+0700\n"
 "Last-Translator: Anousak Souphavanh <anousak@gmail.com>\n"
 "Language-Team: Lao <lo@li.org>\n"
 "Language: \n"
@@ -35,7 +35,7 @@ msgstr "ຕິດຕັ້ງຕໍ່ໂດຍບໍ່ມີບູຕໂຫລ
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr "ບໍ່ສາມາດເມົ້າທ໌ /target/proc"
+msgstr "ລົ້ມແຫຼວທີ່ຈະຍຶດເປົ້າໝາຍ /target/proc"
 
 #. Type: error
 #. Description
