--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -7,18 +7,27 @@
 # Basque messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Inaki Larranaga Murgoitio 2005
-#
-# Piarres Beobide <pi@beobide.net>, 2004, 2005, 2006, 2007, 2008.
-# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2008.
+# Translations from iso-codes:
+# Copyright (C)
+# Translations from KDE:
+# Piarres Beobide <pi@beobide.net>, 2004-2009, 2011.
+# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2008, 2010.
+# Mikel Olasagasti <hey_neken@mundurat.net>, 2004.
+# Piarres Beobide Egaña <pi@beobide.net>, 2004,2006,2007, 2008, 2009.
+# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2010.
+# Free Software Foundation, Inc., 2002.
+# Alastair McKinstry <mckinstry@computer.org>, 2002.
+# Marcos Goienetxe <marcos_g@infonegocio.com>, 2002.
+# Piarres Beobide <pi@beobide.net>, 2008.
+# Xabier Bilbao <xabidu@gmail.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2009-05-26 09:23+0200\n"
-"Last-Translator: pi <pi>\n"
-"Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
+"PO-Revision-Date: 2012-05-06 15:56+0200\n"
+"Last-Translator: Piarres Beobide <pi@beobide.net>\n"
+"Language-Team: debian-l10n-eu@lists.debian.org\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,7 +48,7 @@ msgstr "Jarraitu abioko kargatzailerik gabe"
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr "Ezin izan da /target/proc muntatu"
+msgstr "Huts egin du /target/proc muntatzean"
 
 #. Type: error
 #. Description
@@ -82,10 +91,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Aldagai batzuk Genesi OpenFirmware-n ezarri behar dira sistemak Debian "
-"automatikoki abiarazi dezan. Instalazioaren amaieran, sistema berrabiarazi "
-"egingo da. Firmware-aren gonbitean, ezarri Firmware-aren aldagai hauek "
-"automatikoki abiaraztea gaitzeko:"
+"Aldagai batzuk Genesi firmwarean ezarri behar dira sistema automatikoki "
+"abiarazi dadin. Instalazioaren amaieran, sistema berrabiarazi egingo da. "
+"Firmwarearen gonbitean, ezarri firmwarearen aldagai hauek automatikoki "
+"abiaraztea gaitzeko:"
 
 #. Type: note
 #. Description
@@ -106,7 +115,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Bestela, nukleoa eskuz abiarazi dezakezu firmware gonbitean honakoa idatziz:"
+"Bestela, nukleoa eskuz abiarazi dezakezu firmwarearen gonbitean honakoa "
+"idatziz:"
 
 #. Type: note
 #. Description
@@ -117,10 +127,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"Aldagai batzuk CFE-an ezarri behar dira sistemak Debian automatikoki "
-"abiarazi dezan. Instalazioaren amaieran, sistema berrabiarazi egingo da. "
-"Firmware-aren gonbitean, ezarri Firmware-aren aldagai hauek abiaraztea "
-"errazteko:"
+"Aldagai batzuk CFE-n ezarri behar dira sistema automatikoki abiarazi dadin. "
+"Instalazioaren amaieran, sistema berrabiarazi egingo da. Firmware-aren "
+"gonbitean, ezarri firmwarearen aldagai hauek abiaraztea errazteko:"
 
 #. Type: note
 #. Description
@@ -141,8 +150,8 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
-"Sistema abiaraztean auto-abioa nahiago baduzu, hurrengo aldagai hau ezarri "
-"aurrekoekin batera:"
+"Sistema abiaraztean abio automatikoa nahiago baduzu, aldagai hau ezar "
+"dezakezu aurrekoekin batera:"
 
 #. Type: note
 #. Description
