--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -4,26 +4,39 @@
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
 # translation of lv.po to Latvian
-# Aigars Mahinovs <aigarius@debian.org>, 2006, 2008.
-# Viesturs Zarins <viesturs.zarins@mii.lu.lv>, 2008.
-# Peteris Krisjanis <pecisk@gmail.com>, 2008.
 # Latvian messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
+#
+# Translations from iso-codes:
+# Copyright (C) Free Software Foundation, Inc., 2001,2003.
+# Translations from KDE:
+# Andris Maziks <andzha@latnet.lv>
+#
+# Aigars Mahinovs <aigarius@debian.org>, 2006, 2008.
+# Viesturs Zarins <viesturs.zarins@mii.lu.lv>, 2008.
+# Aigars Mahinovs <aigarius@debian.org>, 2006.
+# Alastair McKinstry <mckinstry@computer.org>, 2001, 2002.
+# Free Software Foundation, Inc., 2002,2004.
+# Juris Kudiņš <cooker@inbox.lv>, 2001.
+# Rihards Priedītis <rprieditis@gmail.com>, 2009, 2010.
+# Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>, 2012.
+# Peteris Krisjanis <pecisk@gmail.com>, 2008, 2012.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: lv\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2010-11-17 00:02+0200\n"
-"Last-Translator: Aigars Mahinovs <aigarius@debian.org>\n"
-"Language-Team: Latvian <locale@laka.lv>\n"
+"PO-Revision-Date: 2012-05-27 12:29+0300\n"
+"Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
+"Language-Team: Latviešu <locale-l10n@googlegroups.com>\n"
 "Language: lv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
-"2);\n"
+"2)\n"
 
 #. Type: text
 #. Description
@@ -38,14 +51,14 @@ msgstr "Turpināt bez palaidēja"
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr "Nevarēja piemontēt /target/proc"
+msgstr "Neizdevās piemontēt /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr "Proc failu sistēmas montēšana uz /target/proc neizdevās."
+msgstr "Neizdevās piemontēt proc datņu sistēmu uz /target/proc."
 
 #. Type: error
 #. Description
@@ -61,7 +74,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr "Uzmanību: jūsu sistēma varētu būt nepalaižama!"
+msgstr "Uzmanību — jūsu sistēma varētu būt nepalaižama!"
 
 #. Type: note
 #. Description
@@ -71,7 +84,7 @@ msgstr "Uzmanību: jūsu sistēma varētu būt nepalaižama!"
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr "Programmaparatūras mainīgo iestatīšana automātiskai palaišanai"
+msgstr "Iestata aparātprogrammatūras mainīgos, lai automātiski palaistu"
 
 #. Type: note
 #. Description
@@ -83,10 +96,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Lai jūsu sistēmu varētu palaist automātiski, Genesi programmaparatūrai ir "
-"jānorāda daži mainīgie. Šīs instalēšanas beigās sistēma tiks pārlaista. Lai "
-"aktivizētu automātisko palaišanos, programmaparatūras iestatījumu izvēlnē "
-"iestatiet šādus programmaparatūras mainīgos:"
+"Lai jūsu sistēmu varētu palaist automātiski, Genesi aparātprogrammatūrai ir "
+"jānorāda daži mainīgie. Instalēšanas beigās sistēma tiks pārlaista. Lai "
+"aktivētu automātisko palaišanos, aparātprogrammatūras iestatījumu uzvednē "
+"iestatiet šādus aparātprogrammatūras mainīgos:"
 
 #. Type: note
 #. Description
@@ -97,7 +110,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "To jums vajadzēs izdarīt tikai vienu reizi, vēlāk varēsiet vienkārši ievadīt "
-"\"boot\" komandu vai pārlaist datoru, lai pārietu uz nākamo instalēšanas "
+"\"boot\" komandu vai pārstartēt datoru, lai pārietu uz nākamo instalēšanas "
 "soli."
 
 #. Type: note
@@ -108,8 +121,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Pretējā gadījumā jūs varēsiet palaist sistēmas kodolu, ievadot sekojošu "
-"komandu programmaparatūras konsolē:"
+"Vai arī jūs varēsiet palaist sistēmas kodolu, ievadot sekojošu komandu "
+"aparātprogrammatūras konsolē:"
 
 #. Type: note
 #. Description
@@ -120,10 +133,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"Lai jūsu sistēma varētu tikt palaista automātiski, CFE ir jānorāda daži "
-"mainīgie. Šīs instalācijas beigās sistēma pārlaidīsies. Lai aktivizētu "
-"automātisko palaišanu programmaparatūras iestatījumu izvēlnē izstādiet "
-"sekojošus programmaparatūras mainīgos:"
+"Lai sistēmu varētu palaist automātiski, CFE ir jānorāda daži mainīgie. Šīs "
+"instalācijas beigās sistēma pārstartēsies. Lai vienkāršotu palaišanu, "
+"aparātprogrammatūras uzvednē iestatiet sekojošus mainīgos:"
 
 #. Type: note
 #. Description
@@ -133,7 +145,7 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
-"Jums tas būs jāveic tikai šoreiz. Tas nodrošinās iespēju vienkārši izsaukt "
+"Tas būs jāveic tikai šoreiz. Tas nodrošinās iespēju vienkārši izsaukt "
 "komandu \"boot_debian\" CFE uzvednē."
 
 #. Type: note
@@ -162,8 +174,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Palaidējs nav uzinstalēts. Tas ir noticis tāpēc, ka jūs izvēlējāties to "
-"neinstalēt, vai arī jūsu datora arhitektūra pagaidām neatbalsta palaidēju."
+"Palaidējs nav uzinstalēts. Tas ir noticis vai nu tāpēc, ka jūs izvēlējāties "
+"to neinstalēt, vai arī jūsu datora arhitektūra pagaidām neatbalsta palaidēju."
 
 #. Type: note
 #. Description
@@ -173,5 +185,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Jums būs jāpalaiž sistēma manuāli ar ${KERNEL} kodolu uz ${BOOT} sadaļas un "
+"Jums būs jāpalaiž sistēma manuāli ar ${KERNEL} kodolu nodalījumā ${BOOT}, "
 "ievadot ${ROOT} kā kodola argumentu."
