--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -22,7 +22,7 @@ msgstr ""
 "Project-Id-Version: gl\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2012-06-10 01:37+0200\n"
+"PO-Revision-Date: 2012-06-14 01:31+0200\n"
 "Last-Translator: Jorge Barreiro <yortx.barry@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -165,9 +165,9 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Non se instalou ningún cargador de arranque. Pode ser porque decidiu non o "
-"facer ou porque a súa arquitectura específica aínda non ten soporte dun "
-"cargador."
+"Non se instalou ningún cargador de arranque. Pode ser porque decidiu non "
+"facelo ou porque a súa arquitectura específica aínda non permite o uso dun "
+"cargador e arranque."
 
 #. Type: note
 #. Description
