--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.35) UNRELEASED; urgency=low
+
+  * Do not assume Linux kernel verison is 2.*
+  * Use symlink 'vmlinuz' instead of full kernel name.
+
+ -- Milan Kupcevic <milan@physics.harvard.edu>  Tue, 17 Jul 2012 00:16:44 -0400
+
 nobootloader (1.34) unstable; urgency=low
 
   * Team upload
