--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nobootloader (1.35) UNRELEASED; urgency=low
+nobootloader (1.35) unstable; urgency=low
 
   [ Milan Kupcevic ]
   * Do not assume Linux kernel verison is 2.*
@@ -7,7 +7,7 @@ nobootloader (1.35) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Add myself to Uplaoders
 
- -- Milan Kupcevic <milan@physics.harvard.edu>  Tue, 17 Jul 2012 00:16:44 -0400
+ -- Christian Perrier <bubulle@debian.org>  Sun, 05 Aug 2012 12:32:15 +0200
 
 nobootloader (1.34) unstable; urgency=low
 
