--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ nobootloader (1.35) unstable; urgency=low
   * Use symlink 'vmlinuz' instead of full kernel name.
 
   [ Christian Perrier ]
-  * Add myself to Uplaoders
+  * Add myself to Uploaders
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 05 Aug 2012 12:32:15 +0200
 
