--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nobootloader (1.35) unstable; urgency=low
   [ Milan Kupcevic ]
   * Do not assume Linux kernel verison is 2.*
   * Use symlink 'vmlinuz' instead of full kernel name.
+  * Fallback to factory default HD firmware alias, not to <unknown device>
 
   [ Christian Perrier ]
   * Add myself to Uploaders
