--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -3,41 +3,66 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of dz.po to Dzongkha
+# Translation of debian-installer level 1 Dzongkha
+# Debian Installer master translation file template
+# Copyright @ 2006 Free Software Foundation, Inc.
+# Sonam Rinchen <somchen@druknet.bt>, 2006.
+#
+#
+# Translations from iso-codes:
+#   Free Software Foundation, Inc., 2006
+#   Kinley Tshering <gaseokuenden2k3@hotmail.com>, 2006
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: dDz.po\n"
+"Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-29 22:50+0000\n"
+"PO-Revision-Date: 2012-02-29 04:41-0500\n"
+"Last-Translator: Jurmey Rabgay <jrabgay@dit.gov.bt>\n"
+"Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
+"Language: dz\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #. Type: text
 #. Description
 #. Main menu item
 #. :sl1:
 #: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "བུཊི་མངོན་གསལ་པ་མེདཔ་སྦེ་འཕྲོ་མཐུད།"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
-msgstr ""
+msgstr " /target/proc སྦྱར་བརྩེགས་འབད་ནི་ལུ་འཐུས་ཤོར་བྱུང་ཡོད།"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr ""
+msgstr " /target/proc ལུ་ proc ཡིག་སྣོད་རིམ་ལུགས་སྦྱར་བརྩེགས་འབད་ནི་ལུ་འཐུས་ཤོར་བྱུང་ཡོ"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr ""
+msgstr "/var/log/syslog ཞིབ་དཔྱད་འབད་ཡང་ན་རྒྱས་བཤད་ཀྱི་དོན་ལུ་བར་ཅུ་ཡལ་མ་སྒྲོམ་༤་པ་འདི་བལྟ།"
 
 #. Type: error
 #. Description
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr ""
+msgstr "ཉེན་བརྡ་:ཁྱོད་ཀྱི་རིམ་ལུགས་བུཊི་འབད་མི་བཏུབ་འོང་!"
 
 #. Type: note
 #. Description
@@ -47,7 +72,7 @@ msgstr ""
 #. :sl4:
 #: ../nobootloader.templates:3001 ../nobootloader.templates:4001
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད་དོ།"
 
 #. Type: note
 #. Description
@@ -59,6 +84,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"ཁྱོད་ཀྱི་རིམ་ལུགས་རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ ཇི་པི་སི་ ཕརཤ་ཝེར་ནང་ འགྱུར་ཅན་ཚུ་ལ་ལོ་ཅིག་ གཞི་"
+"སྒྲིག་འབད་དགོ། གཞི་བཙུགས་མཇུག་བསྡུ་བའི་ཤུལ་ལུ་ རིམ་ལུགས་དེ་བུཊི་འབད་འོང་། རང་བཞིན་བུ་ཊིང་་འབད་ཚུགས་"
+"པའི་དོན་ལུ་ ཕརམ་ཝེར་ནུས་སྤེལ་གུ་ འོག་གི་ཕརམ་ཝེར་་འགྱུར་བ་ཚུ་ གཞི་སྒྲིག་འབད།"
 
 #. Type: note
 #. Description
@@ -68,6 +96,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"འ་ནི་འདི་ཁྱོད་ཀྱིས་ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། ཤུལ་ལས་ \"boot\"བརྡ་བཀོད་བཙུགས་ ཡང་ན་ ཁྱོད་ཀྱི་རིམ་"
+"ལུགས་གསརཔ་གཞི་བཙུགས་འབད་ཡོད་མི་ལུ་འགྱོ་ནིའི་དོན་ལུ་ རིམ་ལུགས་དེ་ རི་བུཊི་འབད།"
 
 #. Type: note
 #. Description
@@ -77,6 +107,8 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"ཐབས་གཞན་གྱི་ཐོག་ལས་ ཁྱོད་ཀྱིས་ཕརམ་ཝེར་ནུས་སྤེལ་གུ་ བཙུགས་པའི་ཐོག་ལས་ ལག་ཐོག་ལས་ཀར་ནེལ་དེ་ བུཊི་"
+"འབད་ཚུགས་:"
 
 #. Type: note
 #. Description
@@ -87,6 +119,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
+"རིམ་ལུགས་འདི་ རང་བཞིན་གྱིས་ བུཊི་འབད་ཐབས་ལུ་ སི་ཨེཕ་ཨི་ནང་ འགྱུར་ཅན་ལ་ལོ་ཅིག་ གཞི་སྒྲིག་འབད་དགོ། "
+"གཞི་བཙུགས་འབད་ཚར་ཞིནམ་ལས་ རིམ་ལུགས་འདི་ལོག་བུཊི་འབད་འོང་། ཕརམ་ཝེར་རྒྱུད་བསྐུལ་ནང་ བུཊི་ཊིང་འཇམ་"
+"སམ་བཟོ་ཐབས་ལུ་ འོག་གི་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད།"
 
 #. Type: note
 #. Description
@@ -96,6 +131,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
+"འ་ནི་འདི་ ཁྱོད་ཀྱིས་ ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། དེ་གིས་ སི་ཨེཕ་ཨི་རྒྱུད་བསྐུལ་ནང་ བརྡ་བཀོད་  "
+"\"boot_debian\" བྱིན་ཚུགས།"
 
 #. Type: note
 #. Description
@@ -105,13 +142,15 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
+"ཚར་རེ་འགོ་བཙུགསཔ་ད་ རང་བཞིན་-བུཊི་འདི་ དགའ་བ་ཅིན་ གོང་གི་ཁ་སྐོང་སྦེ་ འོག་གི་འགྱུར་ཅན་ཚུ་ གཞི་སྒྲིག་"
+"འབད་ཚུགས།"
 
 #. Type: note
 #. Description
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr ""
+msgstr "བུཊི་མངོན་གསལ་པ་གཞི་བཙུགས་མ་འབད་བས།"
 
 #. Type: note
 #. Description
@@ -121,6 +160,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"བུཊི་མངོན་གསལ་པ་འདི་གཞི་བཙུགས་མ་འབད་བས་ ག་ཅི་སྦེ་ཟེར་བ་ཅིན་ཁྱོད་ཀྱིས་གདམ་ཁ་མ་རྐྱབས་པས་ ཡང་ན་ "
+"ག་ཅི་སྦེ་ཟེར་བ་ཅིན་ཁྱོད་ཀྱི་དམིགས་བསལ་བཟོ་བཀོད་འདི་གིས་ད་ཚུན་བུཊི་མངོན་གསལ་པ་ལུ་རྒྱབ་སྐྱོར་མ་འབད་བས།"
 
 #. Type: note
 #. Description
@@ -130,3 +171,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"ཀར་ནེལ་སྒྲུབ་རྟགས་བཟུམ་སྦེ་རྩིས་སྤྲོད་འབད་ཡོད་མི་${BOOT} དང་ ${ROOT}བར་བཅད་ལུ་ཀར་ནེལ་ "
+"${KERNEL}འདི་དང་མཉམ་ཁྱོད་ཀྱིས་ལག་ཐོག་ལས་བུཊི་འབད་དགོ"
