--- a/debian/po/ast.po
+++ b/debian/po/ast.po
@@ -19,8 +19,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2012-01-28 13:25+0100\n"
-"Last-Translator: Mikel González <mikelglez@softastur.org>\n"
+"PO-Revision-Date: 2012-10-09 13:08+0100\n"
+"Last-Translator: ivarela <ivarela@ubuntu.com>\n"
 "Language-Team: Softastur\n"
 "Language: ast\n"
 "MIME-Version: 1.0\n"
@@ -62,7 +62,7 @@ msgstr "Comprobar /var/log/syslog o ver consola virtual 4 pa los detalles."
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
-msgstr "Avisu: ¡El to sistema puede nun ser arrancable!"
+msgstr "Avisu: ¡El to sistema pue nun ser arrancable!"
 
 #. Type: note
 #. Description
@@ -84,7 +84,7 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Dalgunes variables necesites afitase nel firmware Genesi n'orde pa que'l to "
+"Dalgunes variables necesiten afitase nel firmware Genesi n'orde pa que'l to "
 "sistema pueda arrancar automáticamente. A lo cabero de la instalación, el "
 "sistema reaniciará. Nel prompt del firmware, afita les siguientes variables "
 "del firmware a activar auto aniciu:"
@@ -98,7 +98,7 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Esto sólo lo necesites facer esta vegada. Dempues, introduz el comandu \"boot"
-"\" o reinicia'l sistema pa entrar nel to sistema recién instaláu."
+"\" o reanicia'l sistema pa entrar nel to sistema recién instaláu."
 
 #. Type: note
 #. Description
@@ -108,7 +108,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alternativamente, puedes arrancar el kernel manualmente introduciendolo nel "
+"Alternativamente, pues arrancar el kernel manualmente introduciéndolo nel "
 "prompt del firmware:"
 
 #. Type: note
@@ -120,9 +120,9 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"Dalgunes variables necesites afitase en CFE en orde, pa que'l to sistema "
-"arranque. A lo cabero de la instalación, el sistema reiniciará. Nel prompt "
-"del firmware, afita les siguientes variables pa simplificar l'arranque:"
+"Dalgunes variables necesiten afitase en CFE pa que'l to sistema arranque. A "
+"lo cabero de la instalación, el sistema reiniciará. Nel prompt del firmware, "
+"afita les siguientes variables pa simplificar l'arranque:"
 
 #. Type: note
 #. Description
@@ -143,7 +143,7 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
-"Si quies un autoarranque en cada entamu, puedes afitar la siguiente variable "
+"Si quies un autoarranque en cada entamu, pues afitar la siguiente variable "
 "amestándola a les d'abaxo:"
 
 #. Type: note
