--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.37) unstable; urgency=low
+
+  [ Updated translations ]
+  * Asturian (ast.po) by ivarela
+
+ -- Christian Perrier <bubulle@debian.org>  Mon, 15 Oct 2012 09:18:06 +0200
+
 nobootloader (1.36) unstable; urgency=low
 
   [ Updated translations ]
