[l10n] [SILENT_COMMIT]  Commit changed/added files

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -4,17 +4,24 @@
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
 # Catalan messages for debian-installer.
-# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2010 Software in the Public Interest, Inc.
+# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2010, 2012 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2006, 2007, 2008, 2010.
+# Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2006, 2007, 2008, 2010, 2012.
 # Guillem Jover <guillem@debian.org>, 2005, 2007.
 #
+# Translations from iso-codes:
+# Alastair McKinstry <mckinstry@computer.org>, 2001.
+# Free Software Foundation, Inc., 2002,2004,2006
+# Orestes Mas i Casals <orestes@tsc.upc.es>, 2004-2006. (orestes: He usat la nomenclatura de http://www.traduim.com/)
+# Softcatalà <info@softcatala.org>, 2000-2001
+# Toni Hermoso Pulido <toniher@softcatala.cat>, 2010.
+# Traductor: Jordi Ferré <jordiferre@catalonia.altranet.fr>
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer squeeze\n"
+"Project-Id-Version: debian-installer wheezy\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2010-10-18 21:17+0200\n"
+"PO-Revision-Date: 2012-10-18 18:34+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "Language: ca\n"
@@ -82,7 +89,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Es necessita establir algunes variables al microprogramari Genesi per a "
-"poder arrencar el sistema automàticament. Al final de la instaŀlació, el "
+"poder arrencar el sistema automàticament. Al final de la instal·lació, el "
 "sistema tornarà a arrencar. A l'indicador del microprogramari, establiu les "
 "següents variables del microprogramari per a habilitar l'arrencada "
 "automàtica:"
@@ -97,7 +104,7 @@ msgid ""
 msgstr ""
 "Només us caldrà fer això una vegada. Després, introduïu l'ordre «boot» o "
 "torneu a arrencar el sistema per a iniciar el sistema que s'acaba "
-"d'instaŀlar."
+"d'instal·lar."
 
 #. Type: note
 #. Description
@@ -120,7 +127,7 @@ msgid ""
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
 "Es necessita establir algunes variables al CFE per a poder arrencar el "
-"sistema automàticament. Al final de la instaŀlació, el sistema tornarà a "
+"sistema automàticament. Al final de la instal·lació, el sistema tornarà a "
 "arrencar. A l'indicador del microprogramari, establiu les següents variables "
 "per a simplificar l'arrencada:"
 
@@ -151,7 +158,7 @@ msgstr ""
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr "No s'ha instaŀlat cap carregador"
+msgstr "No s'ha instal·lat cap carregador"
 
 #. Type: note
 #. Description
@@ -161,7 +168,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"No s'ha instaŀlat cap carregador, bé perquè heu triat no instaŀlar-lo, o "
+"No s'ha instal·lat cap carregador, bé perquè heu triat no instal·lar-lo, o "
 "perquè la vostra arquitectura específica encara no suporta un carregador."
 
 #. Type: note
