--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.38) unstable; urgency=low
+
+  [ Updated translations ]
+  * Catalan (ca.po) by Jordi Mallach
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 11 Dec 2012 22:02:32 +0100
+
 nobootloader (1.37) unstable; urgency=low
 
   [ Updated translations ]
