--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.39) unstable; urgency=low
+
+  [ Updated translations ]
+  * Croatian (hr.po) by Tomislav Krznar
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 17 May 2013 22:24:12 +0200
+
 nobootloader (1.38) unstable; urgency=low
 
   [ Updated translations ]
