--- a/debian/po/tg.po
+++ b/debian/po/tg.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2013-08-15 16:26+0500\n"
-"Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
 "Language-Team: Tajik <victor.ibragimov@gmail.com>\n"
 "Language: Tajik\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "Идома додан бе худроҳандозӣ"
 #: ../nobootloader.templates:2001
 #, fuzzy
 msgid "Failed to mount /target/proc"
-msgstr "Диски нарм васл карда нашуд"
+msgstr "    "
 
 #. Type: error
 #. Description
@@ -47,7 +47,7 @@ msgstr "Диски нарм васл карда нашуд"
 #: ../nobootloader.templates:2001
 #, fuzzy
 msgid "Mounting the proc file system on /target/proc failed."
-msgstr "Насби системаи асосӣ дар /target/ қатъ карда шудааст."
+msgstr "    /target/   ."
 
 #. Type: error
 #. Description
@@ -138,7 +138,7 @@ msgstr ""
 #: ../nobootloader.templates:5001
 #, fuzzy
 msgid "No boot loader installed"
-msgstr "Дастгоҳ барои насби боркунандаи роҳандозӣ?"
+msgstr "    ?"
 
 #. Type: note
 #. Description
