--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -13,16 +13,30 @@
 # Halil Demirezen <halild@bilmuh.ege.edu.tr>, 2004.
 # Murat Demirten <murat@debian.org>, 2004.
 #
-# Mert Dirik <mertdirik@gmail.com>, 2008, 2009.
+# Mert Dirik <mertdirik@gmail.com>, 2008-2012.
+#
+# Translations from iso-codes:
+#   Alastair McKinstry <mckinstry@computer.org>, 2001.
+#   (translations from drakfw)
+#   Fatih Demir <kabalak@gmx.net>, 2000.
+#   Free Software Foundation, Inc., 2000,2004
+#   Kemal Yilmaz <kyilmaz@uekae.tubitak.gov.tr>, 2001.
+#   Mert Dirik <mertdirik@gmail.com>, 2008.
+#   Nilgün Belma Bugüner <nilgun@fide.org>, 2001.
+#   Recai Oktaş <roktas@omu.edu.tr>, 2004.
+#   Tobias Quathamer <toddy@debian.org>, 2007.
+#     Translations taken from ICU SVN on 2007-09-09
+#   Ömer Fadıl USTA <omer_fad@hotmail.com>, 1999.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2010-10-29 17:13+0200\n"
+"PO-Revision-Date: 2013-09-24 21:22-0000\n"
 "Last-Translator: Mert Dirik <mertdirik@gmail.com>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
-"Language: \n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -111,7 +125,7 @@ msgid ""
 "the firmware prompt:"
 msgstr ""
 "Alternatif olarak, aygıt komut isteminde şu satırı girerek çekirdeği elle "
-"yüklemeniz de mümkün:"
+"önyüklemeniz de mümkündür:"
 
 #. Type: note
 #. Description
