--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.42) unstable; urgency=low
+
+  [ Updated translations ]
+  * Turkish (tr.po) by Mert Dirik
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 09 Nov 2013 19:28:50 +0100
+
 nobootloader (1.41) unstable; urgency=low
 
   [ Updated translations ]
