--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -10,19 +10,30 @@
 #
 # Safir Secerovic <sapphire@linux.org.ba>, 2006.
 # Armin Besirovic <armin@linux.org.ba>, 2008.
+#
+# Translations from iso-codes:
+#   Alastair McKinstry <mckinstry@computer.org>, 2001,2002.
+#   Free Software Foundation, Inc., 2001,2002,2003,2004
+#   Safir Šećerović <sapphire@linux.org.ba>, 2004,2006.
+#   Vedran Ljubovic <vljubovic@smartnet.ba>, 2001
+#   (translations from drakfw).
+#   Translations from KDE:
+#   Nesiren Armin <bianchi@lugbih.org>, 2002
+#   Vedran Ljubovic <vljubovic@smartnet.ba>, 2002
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_bs\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2010-07-27 18:25+0100\n"
-"Last-Translator: Armin Beširović <armin@linux.org.ba>\n"
+"PO-Revision-Date: 2013-11-29 19:21+0100\n"
+"Last-Translator: Amila Valjevčić <valjevcic.amila@gmail.com>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
 "Language: bs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: 3\n"
+"Plural-Forms: 3;\n"
 
 #. Type: text
 #. Description
@@ -52,7 +63,7 @@ msgstr "Montiranje proc datotečnog sistema na /target/proc nije uspjelo."
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
-"Provjerite /var/log/messages ili pogledajte virtuelnu konzolu 4 za detalje."
+"Provjerite /var/log/syslog ili pogledajte virtualnu konzolu 4 za detalje."
 
 #. Type: error
 #. Description
