--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.43) unstable; urgency=low
+
+  [ Updated translations ]
+  * Bosnian (bs.po) by Amila Valjevčić
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 17 Dec 2013 12:16:49 +0100
+
 nobootloader (1.42) unstable; urgency=low
 
   [ Updated translations ]
