[l10n]  Commit changed/added files

--- a/debian/po/tg.po
+++ b/debian/po/tg.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2009-05-29 22:50+0000\n"
-"PO-Revision-Date: 2013-08-18 00:02+0500\n"
+"PO-Revision-Date: 2013-12-03 12:47+0500\n"
 "Last-Translator: Victor Ibragimov <victor.ibragimov@gmail.com>\n"
 "Language-Team: Tajik <victor.ibragimov@gmail.com>\n"
 "Language: Tajik\n"
@@ -177,4 +177,4 @@ msgid ""
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Ба шумо лозим мешавад, ки компютери худро ба таври дастӣ бо ҳастаи ${KERNEL} "
-"дар қисмбандии ${BOOT}ва ${ROOT} ҳамчун аргументи ҳаста роҳандозӣ кунед."
+"дар қисми диски ${BOOT}ва ${ROOT} ҳамчун аргументи ҳаста роҳандозӣ кунед."
