--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.45) UNRELEASED; urgency=low
+
+  * Run update-initramfs to include reduced set of modules, thus reduce 
+    vmlinuz size. (Closes: #782279)
+
+ -- Milan Kupcevic <milan@physics.harvard.edu>  Thu, 09 Apr 2015 18:17:48 -0400
+
 nobootloader (1.44) unstable; urgency=low
 
   [ Updated translations ]
