--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.46) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Turkish (tr.po) by Mert Dirik
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 25 Jul 2015 22:00:01 +0200
+
 nobootloader (1.45) unstable; urgency=low
 
   [ Milan Kupcevic ]
