Use HTTPS for Vcs-* URLs, and link to cgit rather than gitweb.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.47) UNRELEASED; urgency=medium
+
+  * Use HTTPS for Vcs-* URLs, and link to cgit rather than gitweb.
+
+ -- Colin Watson <cjwatson@debian.org>  Fri, 29 Jan 2016 13:35:19 +0000
+
 nobootloader (1.46) unstable; urgency=medium
 
   [ Updated translations ]
