--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.49) unstable; urgency=medium
+
+  [ Updated translations ]
+  * Icelandic (is.po) by Sveinn í Felli
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 13 Jan 2018 16:38:19 +0100
+
 nobootloader (1.48) unstable; urgency=medium
 
   [ Updated translations ]
